--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home
 title: Yuhang Wu
-subtitle: Exploring Computer Graphics and grindling in Overwatch, pushing the boundaries of tech and gaming
+subtitle: Exploring Computer Graphics and grinding in Overwatch, pushing the boundaries of tech and gaming
 ---
